[gd_scene load_steps=2 format=3 uid="uid://8w5x38poef4q"]

[ext_resource type="Script" uid="uid://d0buwfy4iolx1" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Samples" type="GridContainer" parent="."]
offset_left = 50.0
offset_top = 25.0
offset_right = 664.0
offset_bottom = 361.0
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 4

[node name="Button" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button2" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button3" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button4" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button5" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button6" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button7" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button8" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button9" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button10" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button11" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button12" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button13" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button14" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button15" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button16" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button17" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button18" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button19" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button20" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button21" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button22" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button23" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="Button24" type="Button" parent="Samples"]
layout_mode = 2
text = "This is a button!"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -311.0
offset_bottom = 166.0
grow_horizontal = 0

[node name="Generate" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "This Button Changes
Those Buttons!
<------"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "WARMER BUTTONS"

[node name="Warm" type="HSlider" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "COOLER BUTTONS "

[node name="Cool" type="HSlider" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "SKEWED BUTTONS"

[node name="Skew" type="CheckButton" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Export button theme"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Generate" to="." method="_on_button_2_pressed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/HBoxContainer/Warm" to="." method="_on_warm_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/HBoxContainer2/Cool" to="." method="_on_cool_value_changed"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/HBoxContainer3/Skew" to="." method="_on_skew_toggled"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="." method="_on_button_pressed"]
